# FYP_Application

./: .gitignore  EasyUI.py  README.md  UI.py  test_whisper.py  whisper_service.py
AI/android/java/FYP/src/org/example/fyp/: AsrBridge.java  AudioDecoder.java  AudioTranscriber.java  DecodedPcm.java  Main.java
AI/android/java/FYP/templates/: AudioDecoder_AndroidTemplate.txt  AudioTranscriberTemplate.txt
AI/vsl_asr/: .gitignore  CMakeLists.txt
AI/vsl_asr/vsl_asr/: CMakeLists.txt  main.cpp  vsl_asr.cpp  vsl_asr.h  vsl_asr_plugin.cpp  vsl_asr_plugin.h  vsl_audio.cpp  vsl_audio.h
ProjectReports/: 25-26 Final Progress Review ShuWang.docx  25-26 Final Progress Review Template.docx  25-26 Project Final Report_ShuWang_S23153653.docx  Finalreport中文草稿.docx  Gant Table.xlsx  [ShuWang - 23153653] CMP6200 Student Project Declaration 1.docx  最后审查中文草稿.docx  草稿.docx
WhisperAndroidTest/: settings.gradle.kts
WhisperAndroidTest/app/: build.gradle.kts
WhisperAndroidTest/app/src/androidTest/java/com/example/whisperandroidtest/: ExampleInstrumentedTest.kt
WhisperAndroidTest/app/src/main/: AndroidManifest.xml
WhisperAndroidTest/app/src/main/cpp/: CMakeLists.txt  asr_engine.cpp  asr_engine.h  native-lib.cpp  vsl_audio.cpp  vsl_audio.h
WhisperAndroidTest/app/src/main/java/com/example/whisperandroidtest/: MainActivity.kt  WavRecorder.kt
WhisperAndroidTest/app/src/main/java/com/example/whisperandroidtest/ui/theme/: Color.kt  Theme.kt  Type.kt
WhisperAndroidTest/app/src/main/res/values/: strings.xml  themes.xml
WhisperAndroidTest/app/src/test/java/com/example/whisperandroidtest/: ExampleUnitTest.kt
WhisperAndroidTest/gradle/wrapper/: gradle-wrapper.properties
